--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title id="site-title"></title>
+  <title id="site-title">PANKAJ</title>
 <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
@@ -154,8 +154,8 @@ src="https://www.facebook.com/tr?id=2385499775240540=PageView&noscript=1"
 
   <!-- ✅ Easy Variables -->
   <script>
-    const SITE_NAME = "ROCHIT SINGH STOCK ™";       // 🔄 Brand Name
-    const SITE_IMAGE = "logo.png";              // 🔄 Logo/Image path or URL
+    const SITE_NAME = "PANKAJ ™";       // 🔄 Brand Name
+    const SITE_IMAGE = "photo_2025-10-07 15.56.09.jpeg";              // 🔄 Logo/Image path or URL
     const TELEGRAM_LINK = "https://telegram.me/+q-VUgUIWS5k5ZGE1"; // 🔄 Telegram Link / Website Link
   </script>
 
@@ -200,4 +200,5 @@ src="https://www.facebook.com/tr?id=2385499775240540=PageView&noscript=1"
   </script>
 
 </body>
+
 </html>
